# codanim

./: pyproject.toml
codanim/: drawable.py  element.py  scene.py  utils.py
codanim/examples/: example_circles.py  example_values.py  run_example.py
codanim/experiments/: code_trace.cover  code_trace.py  linecache.cover  pydevd_tracing.cover  reactive.py  traceback.cover
codanim/experiments/reactive/: components.py  reactive.py
codanim/experiments/rich_textual/: arr.py  db.py  texty.py
