[tool.poetry]
name = "codanim"
version = "0.1.0"
description = "A framework for creating programmatic animations."
authors = ["Pedro Batista <pedrovhb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyglet = "^1.5.18"
jurigged = "^0.3.4"
attrs = "^21.2.0"
snoop = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
